--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "starterpack-AbubakarKasule",
   "version": "1.0.0",
   "main": "src/index.js",
-  "repository": "https://github.com/dartmouth-cs52-20S/starterpack-AbubakarKasule.git",
+  "repository": "https://github.com/AbubakarKasule/AnaWebsite.git",
   "author": "Abubakar <abubakar.i.kasule.21@dartmouth.edu>",
   "license": "MIT",
   "scripts": {
@@ -10,7 +10,7 @@
     "test": "eslint src/**.js",
     "winbuild": "yarn clean & SET WEBPACK_ENV=production& webpack --colors",
     "clean": "rimraf dist",
-    "windeploy": "yarn winbuild & surge -p dist -d AbubakarKasule.surge.sh & yarn clean"
+    "windeploy": "yarn winbuild & surge -p dist -d AnaSumbo.surge.sh & yarn clean"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
@@ -28,7 +28,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
-    "file-loader": "^6.0.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
