--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.2.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^6.0.1",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.4",
@@ -47,6 +46,7 @@
     "axios": "^0.19.2",
     "jquery": "^3.5.0",
     "lodash.debounce": "^4.0.8",
+    "node-sass": "4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-burger-menu": "^2.7.1",
