--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "axios": "^0.19.2",
     "jquery": "^3.5.0",
     "lodash.debounce": "^4.0.8",
-    "node-sass": "4.14.1",
+    "node": "^16.9.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-burger-menu": "^2.7.1",
@@ -58,6 +58,7 @@
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.41.1",
     "styled-components": "^5.2.0",
     "typeface-roboto": "0.0.75",
     "use-force-update": "^1.0.7"
